fix scrollbar

--- a/frontend/public/reset.css
+++ b/frontend/public/reset.css
@@ -38,6 +38,21 @@ body {
 	-ms-user-select: none!important;
 	user-select: none!important;
 }
+
+::-webkit-scrollbar {
+	width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: var(--color-container);
+	border-radius: 1rem;
+}
 ol, ul {
 	list-style: none;
 }
